initial bug fixes

--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
                     <h3>Prophesise</h3>
                 </div>
             </div>
+            <div id="noGames">
+                    <p>You need to add more games!</p>
+                    <button id="reset1">Try Again</button>
+            </div>
             <div id="tryAgain">
                 <p>Too many games! The oracle can only choose between 10 options.</p>
-                <button id="reset">Try Again</button>
+                <button id="reset2">Try Again</button>
             </div>
             <div id="submittedBody">
                 <div id="gameSelector"></div>
